# agent_crewai-ollama

./: README.md  output.md  pyproject.toml  report.md
knowledge/: user_preference.txt
src/agent_crewai_ollama/: crew.py  main.py
src/agent_crewai_ollama/config/: agents.yaml  tasks.yaml
