[project]
name = "agent_crewai_ollama"
version = "0.1.0"
description = "agent_crewai_ollama using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.119.0,<1.0.0"
]

[project.scripts]
agent_crewai_ollama = "agent_crewai_ollama.main:run"
run_crew = "agent_crewai_ollama.main:run"
train = "agent_crewai_ollama.main:train"
replay = "agent_crewai_ollama.main:replay"
test = "agent_crewai_ollama.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
